Closed
Bug 424264
Opened 18 years ago
Closed 18 years ago
Same URI exposed for all link children associated with imagemaps
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jdiggs, Assigned: evan.yan)
References
(Blocks 1 open bug, )
Details
(Keywords: access)
Attachments
(2 files, 1 obsolete file)
|
83.88 KB,
image/png
|
Details | |
|
2.65 KB,
patch
|
ginnchen+exoracle
:
review+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Examine the contents of the URL
2. Query the accessible Hypertext interface for the table cell which contains the imagemap.
Expected results: Unique URIs would be exposed
Actual results: The URI associated with the first link is exposed as the URI for all of the links.
Other comments: When I originally tested the patch for bug 491786 (using safeway.com) prior to it being checked in, I saw different URIs. However, this bug seems to exist since the patch was checked into trunk. I haven't yet worked out what has changed. :-(
Comment 1•18 years ago
|
||
Joanie, could you show piece of code to see the problem, also please comment what accessible you operate with like acc.GetURI(0) // imagemap accessible
| Reporter | ||
Comment 2•18 years ago
|
||
In the spirit (and hope) that a picture is worth a thousand words I've attached a screenshot of Accerciser showing the hierarchy and the URIs for the test case. If this doesn't help, I'll try words. :-)
Thanks for looking at this so quickly Alexander!
Comment 3•18 years ago
|
||
Ok, on imagemap links are exposed correctly, DOMi test is:
accessible.QueryInterface(Components.interfaces.nsIAccessibleHyperLink);
var len = accessible.anchors;
for(var i=0; i < len; i++) {
output(accessible.getURI(i).spec + "\n");
}
on table cell there is only one link accessible, DOMi test:
accessible.QueryInterface(Components.interfaces.nsIAccessibleHyperText);
output(accessible.links);
Joanie, your picture is very good and it shows there is a bug :) but unfortunately I don't know how to reproduce it. Possibly you'll look at my examples and say me what I do wrong or put your example. Thank you.
The bug is on atk part. We only cached one uri for hyperlink
Assignee: aaronleventhal → Evan.Yan
Status: NEW → ASSIGNED
Attachment #310977 -
Flags: review?(ginn.chen)
| Reporter | ||
Comment 5•18 years ago
|
||
Phew! :-) Thanks Evan!!
I just tried your patch, I'm now seeing the unique URIs. I double checked this time to be sure. :-) I also used your patch during some Orca regression testing and did not see anything change/break as a result of your patch.
I really appreciate it!
Comment on attachment 310977 [details] [diff] [review]
patch
I think we'd better not cache uri and anchor counts in MaiAtkHyperlinkClass.
Just remove the code would be fine.
Attachment #310977 -
Attachment is obsolete: true
Attachment #311333 -
Flags: review?(ginn.chen)
Attachment #310977 -
Flags: review?(ginn.chen)
Attachment #311333 -
Flags: review?(ginn.chen) → review+
Attachment #311333 -
Flags: approval1.9?
Comment 8•18 years ago
|
||
Comment on attachment 311333 [details] [diff] [review]
just not cache uri
a=beltzner
Attachment #311333 -
Flags: approval1.9? → approval1.9+
Comment 9•18 years ago
|
||
/cvsroot/mozilla/accessible/src/atk/nsMaiHyperlink.cpp,v <-- nsMaiHyperlink.cpp
new revision: 1.9; previous revision: 1.8
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•