Bug 424264 - Same URI exposed for all link children associated with imagemaps, patch=evan.yan, r=ginn.chen, a=beltzner